--- a/dynamic.j2
+++ b/dynamic.j2
@@ -4,6 +4,8 @@
             <h1>The server operating system : {{ ansible_distribution }} </h1>
             <br>
             <h1>The server Hostname : {{ ansible_os_family }} </h1>
+            <br>
+            <h1>The Admin User : {{ ansible_os_family }} </h1>
         </center>
     </body>
 </html>
