--- a/dynamic.j2
+++ b/dynamic.j2
@@ -5,7 +5,7 @@
             <br>
             <h1>The server Hostname : {{ ansible_os_family }} </h1>
             <br>
-            <h1>The Admin User : {{ ansible_user}} </h1>
+            <h1>The Admin User : {{ ansible_username}} </h1>
         </center>
     </body>
 </html>
